# miniclaw

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  chat.py  config.sample.json  pyproject.toml  requirements.txt  tool.py
.skills/example-skill/: SKILL.md
docs/: skills-lesssion.md
docs/design/: agent-memory.md  miniclaw-architecture-analysis.md  plan-mode.md
docs/plans/: 2026-05-16-miniclaw_context_compaction_c3c80936.plan.md  2026-05-17-cc-style_compact_timing_6eda5d4f.plan.md  2026-05-17-slim_tool_placeholders_ba61e9da.plan.md  2026-05-17-tool_output_limits_32e33160.plan.md  2026-06-03-fix_cache_metrics_none_a8188704.plan.md  2026-06-03-miniclaw_skill_tool_a0a78518.plan.md  2026-06-03-skill_系统简化_f6097168.plan.md  2026-06-04-路径修复与日期注入_853b98db.plan.md  2026-06-22-memory_tool_output_limits_faed5112.plan.md  2026-06-22-miniclaw_memory_phase1_6b56856d.plan.md  2026-06-22-pyyaml_skill_frontmatter_38666dc4.plan.md  2026-06-23-compact_records_dry_95cd385f.plan.md  2026-06-23-ended_at_to_updated_at_f7b6ea8d.plan.md  (+1 more)
miniclaw/: __init__.py  api.py  cli.py  code_execution.py  config.py  default_config.json  dev_logging.py  dirs.py  plan_mode.py  read_file.py  settings.py  skills.py  tool_output.py  tools.py  tools_config.py  ui.py
miniclaw/context/: config.py  (+5 more)
tests/: __init__.py  test_api.py  test_cli.py  test_code_execution.py  test_context_tokens.py  test_dev_logging.py  test_memory_budget.py  test_memory_store.py  test_memory_tool.py  test_micro_compact.py  test_session_search.py  test_sessions_records.py  test_skills.py  test_summarize.py  test_tools.py
(+16 files in other folders)
